--- a/homework_ass1.html
+++ b/homework_ass1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>Assignment 1</title>
         <script>
             var now = new Date();
             var day = ("0" + now.getDate()).slice(-2);
