--- a/homework_ass1.html
+++ b/homework_ass1.html
@@ -17,7 +17,7 @@
             document.write(today + ', ');
 
             today = (day) + "/" + (month) + "/" + now.getFullYear();
-            document.write(today + ', ');
+            document.write(today);
 
         </script>
     </head>
