--- a/Final/studentDetails.html
+++ b/Final/studentDetails.html
@@ -57,6 +57,9 @@
         <tbody id="tblBody"></tbody>
     </table>
 
+      <ul id="listResults">
+    </ul>
+    
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous" ></script>
@@ -122,6 +125,7 @@
         return (studentsjson.studentId == document.getElementById("userId").value);
       })
       console.log(json);
+      document.getElementById("listResults").innerHTML = json.map(item => `<li>${item.studentId} ${item.firstName} ${item.lastName} ${item.createdDate}</li>`);
     });
 
     
